# Dota2GSI

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: dotnet.yml
Dota2GSI/: CMakeLists.txt  Dota2EventsInterface.cs  Dota2GSI.sln  Dota2GSIFile.cs  EventDispatcher.cs  EventHandler.cs  EventsInterface.cs  GameState.cs  GameStateHandler.cs  GameStateListener.cs
Dota2GSI Dumper/: Dota2GSI Dumper.sln
Dota2GSI Dumper/Dota2GSI Dumper/: Dota2GSI Dumper.csproj  Program.cs
Dota2GSI Example program/: Dota2GSI Example program.sln
Dota2GSI Example program/Dota2GSI Example program/: Dota2GSI Example program.csproj  Program.cs  packages.config
Dota2GSI Example program/Dota2GSI Example program/Properties/: AssemblyInfo.cs
Dota2GSI/Dota2GSI/: Dota2GSI.csproj  GameState.cs  GameStateListener.cs  packages.config
Dota2GSI/Dota2GSI/Nodes/: Abilities.cs  Ability.cs  Attributes.cs  Auth.cs  Building.cs  Buildings.cs  Couriers.cs  Draft.cs  Event.cs  Events.cs  FullPlayerDetails.cs  FullTeamDetails.cs  Hero.cs  Item.cs  Items.cs  League.cs  LeagueTeam.cs  Map.cs  Minimap.cs  NeutralItems.cs  Node.cs  Player.cs  PlayerDetails.cs  PlayerWearables.cs  Provider.cs  Roshan.cs  Stream.cs  Teams.cs  Wearables.cs
Dota2GSI/Dota2GSI/Nodes/AbilitiesProvider/: Ability.cs
Dota2GSI/Dota2GSI/Nodes/BuildingsProvider/: Building.cs
Dota2GSI/Dota2GSI/Nodes/CouriersProvider/: Courier.cs  CourierItem.cs
Dota2GSI/Dota2GSI/Nodes/DraftProvider/: DraftDetails.cs
Dota2GSI/Dota2GSI/Nodes/EventsProvider/: Event.cs
Dota2GSI/Dota2GSI/Nodes/Helpers/: FullPlayerDetails.cs  Vector2D.cs
Dota2GSI/Dota2GSI/Nodes/LeagueProvider/: SelectionPriority.cs
Dota2GSI/Dota2GSI/Nodes/RoshanProvider/: ItemsDrop.cs
Dota2GSI/Dota2GSI/Properties/: AssemblyInfo.cs
Dota2GSI/EventMessages/: AbilitiesEvents.cs  AuthEvents.cs  BaseEvent.cs  BuildingsEvents.cs  CouriersEvents.cs  DotaGameEvent.cs  DraftEvents.cs  EventsEvents.cs  FullDetailsEvents.cs  GameplayEvents.cs  HeroEvents.cs  ItemsEvents.cs  LeagueEvents.cs  MapEvents.cs  MinimapEvents.cs  NeutralItemsEvents.cs  PlayerEvents.cs  ProviderEvents.cs  RoshanEvents.cs  UpdateEvent.cs  WearablesEvents.cs
Dota2GSI/Nodes/: Abilities.cs  Auth.cs  Buildings.cs  Couriers.cs  Draft.cs  Events.cs  Hero.cs  Items.cs  League.cs  Map.cs  Minimap.cs  NeutralItems.cs  Node.cs  Player.cs  Provider.cs  Roshan.cs  Wearables.cs
Dota2GSI/Nodes/AbilitiesProvider/: Ability.cs  AbilityDetails.cs
Dota2GSI/Nodes/BuildingsProvider/: Building.cs  BuildingLayout.cs
Dota2GSI/Nodes/CouriersProvider/: Courier.cs  CourierItem.cs
Dota2GSI/Nodes/DraftProvider/: DraftDetails.cs
Dota2GSI/Nodes/EventsProvider/: Event.cs
Dota2GSI/Nodes/Helpers/: FullPlayerDetails.cs  FullTeamDetails.cs  Vector2D.cs
Dota2GSI/Nodes/HeroProvider/: HeroDetails.cs
Dota2GSI/Nodes/ItemsProvider/: Item.cs  ItemDetails.cs
Dota2GSI/Nodes/LeagueProvider/: LeagueTeam.cs  SelectionPriority.cs  Stream.cs
Dota2GSI/Nodes/MinimapProvider/: MinimapElement.cs
Dota2GSI/Nodes/NeutralItemsProvider/: NeutralItem.cs  NeutralTierInfo.cs  TeamNeutralItems.cs
Dota2GSI/Nodes/PlayerProvider/: PlayerDetails.cs
Dota2GSI/Nodes/RoshanProvider/: ItemsDrop.cs
Dota2GSI/Nodes/WearablesProvider/: PlayerWearables.cs  WearableItem.cs
Dota2GSI/StateHandlers/: AbilitiesHandler.cs  AbilitiesStateHandler.cs  AuthHandler.cs  AuthStateHandler.cs  BuildingsHandler.cs  BuildingsStateHandler.cs  CouriersHandler.cs  CouriersStateHandler.cs  DraftHandler.cs  DraftStateHandler.cs  EventsHandler.cs  EventsStateHandler.cs  FullDetailsHandler.cs  GameplayEventsHandler.cs  HeroHandler.cs  HeroStateHandler.cs  ItemsHandler.cs  ItemsStateHandler.cs  LeagueHandler.cs  LeagueStateHandler.cs  MapHandler.cs  MapStateHandler.cs  MinimapHandler.cs  MinimapStateHandler.cs  NeutralItemsHandler.cs  NeutralItemsStateHandler.cs  PlayerHandler.cs  PlayerStateHandler.cs  ProviderHandler.cs  ProviderStateHandler.cs  RoshanHandler.cs  RoshanStateHandler.cs  WearablesHandler.cs  WearablesStateHandler.cs
Dota2GSI/Utils/: SteamUtils.cs
